<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pomodoro</string>
    <string name="task">Task</string>
    <string name="default_task_name">My Task</string>
    <string name="default_task_category">General</string>
    <string name="save">Save</string>
    <string name="task_name">Name</string>
    <string name="task_category">Category</string>
    <string name="placeholder">Replace</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="_13_37">13:37</string>
    <string name="take_a_break">Take a break.</string>
    <string name="done">Done</string>
    <string name="are_you_done_with">Are you done with</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="work_timer_text">Work Time</string>
    <string name="break_timer_text">Break Time</string>
    <string name="enter">Enter</string>
    <string name="sign_up">Sign Up Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="minutes">Minutes</string>
    <string name="settings">Settings</string>
    <string name="work_time_hint">25</string>
    <string name="break_time_hint">5</string>
    <string name="clipboard_image">Clipboard Image</string>
    <string name="search">Search</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_">New</string>
</resources>
