<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackround"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="188dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/task"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/outlinedTaskName"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTaskName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/task_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTaskCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/task_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTaskName"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/outlinedTaskCategory"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTaskCategory"
            app:layout_constraintTop_toTopOf="@+id/button_save" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/work_timer_text"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextNumberBreak"
            android:layout_width="58dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:hint="@string/break_time_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/minutes"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/editTextNumberWork"
            app:layout_constraintTop_toBottomOf="@+id/settingsSwitch" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/break_timer_text"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextNumberWork"
            android:layout_width="58dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:hint="@string/work_time_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/minutes"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/editTextNumberBreak"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="164dp"
            android:layout_height="250dp"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:contentDescription="@string/clipboard_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clip_board_4747711__340" />

        <Switch
            android:id="@+id/settingsSwitch"
            android:layout_width="121dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTaskCategory" />

        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/settingsLayer"
            android:layout_width="289dp"
            android:layout_height="145dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="135dp"
            android:layout_marginRight="135dp"
            android:visibility="gone"
            app:constraint_referenced_ids="textView6,textView4,editTextNumberBreak,textView5,textView2,editTextNumberWork"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsSwitch">

        </androidx.constraintlayout.helper.widget.Layer>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
