<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackround">

    <Button
        android:id="@+id/button_skip"
        android:layout_width="149dp"
        android:layout_height="54dp"
        android:layout_marginTop="585dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="92dp"
        android:background="@color/colorBlack"
        android:shadowColor="@color/colorBlack"
        android:text="@string/skip"
        android:textColor="@color/colorLightText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_pause"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="149dp"
        android:layout_height="54dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="585dp"
        android:layout_marginBottom="92dp"
        android:background="@color/colorBlack"
        android:shadowColor="@color/colorBlack"
        android:text="@string/pause"
        android:textColor="@color/colorLightText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_task_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_task_title"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_group_2" />

    <TextView
        android:id="@+id/text_task_title"
        android:layout_width="279dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_task_name"
        android:layout_width="152dp"
        android:layout_height="73dp"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="153dp"
        android:layout_height="69dp"
        android:gravity="center"
        android:text="@string/_13_37"
        android:textColor="@color/colorBlack"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
